# simple-ecs

./: .gitignore  CMakeLists.txt  Readme.md  SConstruct  build.bat  conanfile.txt  run.sh
benchmarks/: CMakeLists.txt  benchmarks.cpp
include/: ComPhysics.h  ComTransform.h  Common.h  Component.h  Director.h  Entity.h  Node.h  System.h
sample/: CMakeLists.txt  main.cpp
src/: ComTransform.cpp  Node.cpp
tests/: CMakeLists.txt  tests.cpp
